# mingw-uwp-cli

./: .gitignore  LICENSE  README.md
scripts/: mingw_uwp_cli.py
templates/console/: CMakeLists.txt
templates/corewindow/: App.cpp  AppxManifest.in  CMakeLists.txt
templates/xaml/: App.cpp  AppxManifest.in  CMakeLists.txt  MainPage.cpp  MainPage.h  MainPage.xaml
